--- a/SpMVC_ShopV1/pom.xml
+++ b/SpMVC_ShopV1/pom.xml
@@ -47,6 +47,12 @@
 			<version>2.7.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0</version>
+		</dependency>
+
 
 
 		<dependency>
