--- a/SpMVC_ReadBook/pom.xml
+++ b/SpMVC_ReadBook/pom.xml
@@ -82,6 +82,23 @@
 		<!-- mybatis -->
 		<!-- mybatis spring -->
 		<!-- dbcp2 -->
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<!-- 제이슨 구조의 데이터를 파싱하여 VO에 담기 위한 중간 도구 google simple -->
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<!-- 컨트롤러에서 responsebody를 사용하여 객체 등을 웹으로 json 형태로 만들어 보내는 중간 도구 -->
+		<!-- jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.11.2</version>
+		</dependency>
+
 
 
 		<!-- AspectJ -->
@@ -111,7 +128,7 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.3</version>
-			<scope>test</scope>
+			
 		</dependency>
 
 
