--- a/SpMVC_ReadBook/src/main/webapp/WEB-INF/web.xml
+++ b/SpMVC_ReadBook/src/main/webapp/WEB-INF/web.xml
@@ -19,10 +19,34 @@
 	</filter-mapping>
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	<!-- mybatis-context.xml을 servlet 영역에서 context 영역으로 이동
+		spring security userDetailservice 에서 Dao, mapper 등을 필요로 하기 때문에 기존처럼 servlet영역에서 영역 설정하면 되지만
+		spring security에서 DB로부터 사용자 정보를 조회하는 기능을 사용하려면 mybatis-context 가 context 영역에 있어야 한다.  -->
+	<!-- param-value 설정할 때 *-context.xml 로 할 수 있다
+	그런데, *-context.xml로 설정하면 각 xml 파일이 읽어지는 시점이 미묘하게 흐트러져 bean 을 서로 찾지 못하는 문제가 발생할 수 있다 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+		/WEB-INF/spring/mybatis-context.xml <!-- Dao를 쓰기 위해 마이바티스 context 사용 이러한 순서로 읽어라! 나타내기 위해 *-context 안씀-->
+		/WEB-INF/spring/security-context.xml 
+		/WEB-INF/spring/root-context.xml
+		</param-value>
 	</context-param>
+	
+	
+	<!-- 위치가 굉장히 중요함!!!! 한글 encoding보다는 반드시 뒤로 와야함 -->
+	<filter>
+	<filter-name>springSecurityFilterChain</filter-name> <!-- 디스패쳐로 보내기 전에 얘한테 보냄 -->
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+				 
+</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+	<url-pattern>*</url-pattern>
+	</filter-mapping>
+	
+	
+	
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
 	<listener>
