--- a/SpMVC_BBS_2020/pom.xml
+++ b/SpMVC_BBS_2020/pom.xml
@@ -140,6 +140,13 @@
 
 		</dependency>
 
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.11.3</version>
+</dependency>
+
 
 		<!-- AspectJ -->
 		<dependency>
