--- a/SpMVC_BBS_2020/src/main/webapp/WEB-INF/web.xml
+++ b/SpMVC_BBS_2020/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,15 @@
 		<url-pattern>*</url-pattern>
 	</filter-mapping>
 	
+	<filter>
+		<filter-name>httpPutFormFilter</filter-name>
+		<filter-class>org.springframework.web.filter.FormContentFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>httpPutFormFilter</filter-name>
+		<url-pattern>*</url-pattern>
+	</filter-mapping>
+	
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
